[tool.poetry]
name = "docker-amend"
version = "0.1.1"
description = "Amend Docker images by running a command in a separate layer."
homepage = "https://gitlab.com/notpushkin/docker-amend"
readme = "README.md"
authors = ["Alexander Pushkov <alexander@notpushk.in>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.2.0"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
docker-amend = 'docker_amend:_run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
