[tool.poetry]
name = "docker-amend"
version = "0.1.2"
description = "Amend Docker images by running a command in a separate layer."
homepage = "https://gitlab.com/notpushkin/docker-amend"
readme = "README.md"
authors = ["Alexander Pushkov <alexander@notpushk.in>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.2.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
wemake-python-styleguide = "^0.14.0"
add-trailing-comma = "^2.0.1"
autopep8 = "^1.5.3"
isort = "^4.3.21"
rope = "^0.17.0"

[tool.poetry.scripts]
docker-amend = 'docker_amend:_run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
